--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "homepage": "https://github.com/ericgonzaga/diagramming#readme",
     "devDependencies": {
         "@types/express": "^4.17.17",
+        "@types/hashmap": "^2.3.1",
         "@types/node": "^18.14.6",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
@@ -42,7 +43,9 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
+        "hashmap": "^2.4.0",
         "http-status-codes": "^2.2.0",
+        "ws": "^8.13.0",
         "zod": "^3.21.0"
     }
 }
